iptables
# Generated by iptables-save v1.4.21 on Wed Aug  2 21:59:19 2017
*nat
:PREROUTING ACCEPT [15:8096]
:INPUT ACCEPT [15:8096]
:OUTPUT ACCEPT [1:140]
:POSTROUTING ACCEPT [1:140]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Wed Aug  2 21:59:19 2017
# Generated by iptables-save v1.4.21 on Wed Aug  2 21:59:19 2017
*filter
:INPUT ACCEPT [756:75728]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [572:101368]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Wed Aug  2 21:59:19 2017
